@@ -18,7 +18,13 @@
    "prereqs" : {
       "build" : {
          "requires" : {
-            "ExtUtils::MakeMaker" : "0"
+            "File::Copy" : "0.01",
+            "File::Spec" : "0.01",
+            "Scalar::Util" : "1.10",
+            "Test::File" : "1.10",
+            "Test::File::Cleaner" : "0.02",
+            "Test::File::Contents" : "0.02",
+            "Test::More" : "0.47"
          }
       },
       "configure" : {
@@ -28,15 +34,10 @@
       },
       "runtime" : {
          "requires" : {
-            "File::Copy" : "0.01",
-            "File::Spec" : "0.01",
             "Scalar::Util" : "1.10",
-            "Test::File" : "1.10",
-            "Test::File::Cleaner" : "0.02",
-            "Test::File::Contents" : "0.02",
-            "Test::More" : "0.47",
             "Tree" : "1.00",
-            "UNIVERSAL::require" : "0.10"
+            "UNIVERSAL::require" : "0.10",
+            "perl" : "v5.6.0"
          }
       }
    },
