@@ -19,7 +19,9 @@ use_ok( $CLASS )
 
 use_ok( 'Tree' );
 
-my($dir)  = File::Temp -> newdir;
+# The EXLOCK option is for BSD-based systems.
+
+my($dir)  = File::Temp -> newdir('temp.XXXX', CLEANUP => 1, EXLOCK => 0, TMPDIR => 1);
 my($file) = File::Spec -> catfile($dir, 'test.sqlite');
 my(@opts) =
 (
